Spruce up alerts with nunjucks filter

--- a/src/content/en/docs/01.getting-started/04.project-structure.md
+++ b/src/content/en/docs/01.getting-started/04.project-structure.md
@@ -4,6 +4,11 @@ title: "Project Structure"
 
 Here’s how Baseline is laid out today. It’s intentionally simple while things evolve.
 
+
+{% filter alertBlock("info") %}
+As the project evolves, expect structure and module names to shift. Keep your own customizations in an `_extend` folder (or similar) and import them in `.eleventy.config.js` to simplify updates.
+{% endfilter %}
+
 ## Top-level
 - `.eleventy.config.js`: loads the Baseline plugin and re-exports its dir/template defaults.
 - `_baseline/`: the Baseline plugin code (filters, shortcodes, modules).
@@ -32,5 +37,3 @@ The assets plugin creates a virtual `assets` dir in Eleventy’s config and expo
 ### Head and layout
 - Head is injected with `<baseline-head>` (PostHTML) using site/page data plus `_data/head.js`.
 - Base layout: `src/_includes/layouts/base.njk` renders `<baseline-head>`, header, main content block, and build info.
-
-> As the project evolves, expect structure and module names to shift. Keep your own customizations in an `_extend` folder (or similar) and import them in `.eleventy.config.js` to simplify updates.
