--- a/src/content/en/docs/02.modules/02.assets-esbuild.md
+++ b/src/content/en/docs/02.modules/02.assets-esbuild.md
@@ -2,7 +2,9 @@
 title: "assets-esbuild"
 ---
 
-> Note: The options API is still evolving; expect tweaks as the project grows.
+{% filter alertBlock("warning") %}
+Note: The options API is still evolving; expect tweaks as the project grows.
+{% endfilter %}
 
 ## What it does
 - Adds `js` as a template format and processes `src/assets/js/index.js`.
