--- a/src/content/en/docs/02.modules/03.assets-postcss.md
+++ b/src/content/en/docs/02.modules/03.assets-postcss.md
@@ -2,7 +2,9 @@
 title: "assets-postcss"
 ---
 
-> Note: The options API is still evolving; expect tweaks as the project grows.
+{% filter alertBlock("warning") %}
+Note: The options API is still evolving; expect tweaks as the project grows.
+{% endfilter %}
 
 ## What it does
 - Adds `css` as a template format and processes `src/assets/css/index.css`.
