--- a/src/content/en/docs/02.modules/04.head-core.md
+++ b/src/content/en/docs/02.modules/04.head-core.md
@@ -2,7 +2,9 @@
 title: "head-core"
 ---
 
-> Note: The options API is still evolving; expect tweaks as the project grows.
+{% filter alertBlock("warning") %}
+Note: The options API is still evolving; expect tweaks as the project grows.
+{% endfilter %}
 
 ## What it does
 - Injects head elements via PostHTML using a `<baseline-head>` tag.
