--- a/src/content/en/docs/02.modules/06.navigator-context.md
+++ b/src/content/en/docs/02.modules/06.navigator-context.md
@@ -2,7 +2,9 @@
 title: "navigator-context"
 ---
 
-> Note: The options API is still evolving; expect tweaks as the project grows.
+{% filter alertBlock("warning") %}
+Note: The options API is still evolving; expect tweaks as the project grows.
+{% endfilter %}
 
 ## What it does
 - Adds a Nunjucks global `_context` that returns the underlying Eleventy render context (`this.ctx`).
