Refactor alert component to paired shortcode

--- a/src/content/en/docs/02.modules/02.assets-esbuild.md
+++ b/src/content/en/docs/02.modules/02.assets-esbuild.md
@@ -2,9 +2,9 @@
 title: "assets-esbuild"
 ---
 
-{% filter alertBlock("warning") %}
+{% alertBlock "warning" %}
 Note: The options API is still evolving; expect tweaks as the project grows.
-{% endfilter %}
+{% endalertBlock %}
 
 ## What it does
 - Adds `js` as a template format and processes `src/assets/js/index.js`.
