--- a/src/content/en/docs/02.modules/05.navigator-core.md
+++ b/src/content/en/docs/02.modules/05.navigator-core.md
@@ -2,9 +2,9 @@
 title: "navigator-core"
 ---
 
-{% filter alertBlock("warning") %}
+{% alertBlock "warning" %}
 Note: The options API is still evolving; expect tweaks as the project grows.
-{% endfilter %}
+{% endalertBlock %}
 
 ## What it does
 - Adds a Nunjucks global `_navigator` to inspect the full render context (handy for debugging).
