--- a/src/content/en/docs/02.modules/01.assets-core.md
+++ b/src/content/en/docs/02.modules/01.assets-core.md
@@ -2,9 +2,9 @@
 title: "assets-core"
 ---
 
-{% filter alertBlock("warning") %}
+{% alertBlock "warning" %}
 Note: The options API is still evolving; expect tweaks as the project grows.
-{% endfilter %}
+{% endalertBlock %}
 
 ## What it does
 - Creates a virtual `assets` directory in Eleventy (configurable).
