--- a/src/content/en/docs/02.modules/03.assets-postcss.md
+++ b/src/content/en/docs/02.modules/03.assets-postcss.md
@@ -2,9 +2,9 @@
 title: "assets-postcss"
 ---
 
-{% filter alertBlock("warning") %}
+{% alertBlock "warning" %}
 Note: The options API is still evolving; expect tweaks as the project grows.
-{% endfilter %}
+{% endalertBlock %}
 
 ## What it does
 - Adds `css` as a template format and processes `src/assets/css/index.css`.
