Repurpose doc page and delete obsolete pages

--- a/src/content/en/docs/01.getting-started/05.debugging.md
+++ b/src/content/en/docs/01.getting-started/05.debugging.md
@@ -1,5 +1,5 @@
 ---
-title: "navigator-core"
+title: "Debugging"
 ---
 
 {% alertBlock "warning" %}
@@ -8,7 +8,7 @@ Note: The options API is still evolving; expect tweaks as the project grows.
 
 ## What it does
 - Adds a Nunjucks global `_navigator` to inspect the full render context (handy for debugging).
-- When Baseline `verbose` is true, registers a virtual page from `core-navigator.html` at `/core-navigator/`.
+- When `enableVirtualTemplate` is true, registers a virtual page from at `/navigator-core.html`.
 
 ### Defaults
 - No custom options.
@@ -16,7 +16,8 @@ Note: The options API is still evolving; expect tweaks as the project grows.
 
 ### How it works
 - Registers `_navigator()` to return the current Nunjucks context.
-- If `verbose`, reads the bundled `core-navigator.html` template and adds it as a page with a fixed permalink.
+- Registers `_context()` — a childe of `_navigator()`
+- If `ELEVENTY_ENV !== "production`, ads the bundled `core-navigator.html` template as a page with a fixed permalink.
 
 ### Tips
 - Turn on `verbose: true` in your Baseline plugin options to get the debug page.
